# AgentDnD

./: .gitignore  README.md  __init__.py  config.yaml  dataset.py  download.py  download_files.py  generate_book_embeddings.py  huggingface_utils.py  process.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: settings.py
app/services/: google_cloud_storage.py  text_processing.py
archive/: config.yaml
archive/indexers/: create_pinecone_qa_index.py
archive/utils/: rankers.py  retrievers.py  unittesting.py
configs/: dataset.yaml  downloads.yaml  logger.yaml  process.yaml
dungeon_and_dragons/: main.py
dungeon_and_dragons/core/: settings.py
dungeon_and_dragons/models/instructor_models/: generate_adventure.py
dungeon_and_dragons/routes/: generate_adventure.py
dungeon_and_dragons/services/: generate_adventure.py  google_cloud_storage.py
tests/: conftest.py  test_google_cloud_storage.py  test_text_processing.py
utils/: __init__.py  configurations.py  exception_handeling.py  exceptions.py  gcstorage.py  preprocessor.py  preprocessors.py  rankers.py  retriever.py  retrievers.py  splitters.py
